<resources>
    <string name="app_name">WPW</string>
    <string name="action_settings">Settings</string>
    <string name="name">Наименование</string>
    <string name="full_name">Полное наименование</string>
    <string name="phone">Телефон</string>
    <string name="email">E-mail</string>
    <string name="web">WWW</string>
    <string name="name_person">Имя</string>
    <string name="department">Должность</string>
    <string name="string_build">Ул./Дом</string>
    <string name="city">Город</string>
    <string name="post_code">Индекс</string>
    <string name="country">Страна</string>
    <string name="address">АДРЕС</string>
    <string name="dell_db">Dell DB</string>
    <string name="settings">Настройки</string>
    <string name="lists">Справочники</string>
    <string name="country_codes">Телефонный код страны</string>
    <string name="empty">Нет записей</string>
    <string name="litl_cod_country">Koд по ISO 3166–1</string>
    <string name="toast_upd_country">Код страны успешно обновлен!</string>
    <string name="toast_dell_country">Код страны успешно удален!</string>
    <string name="btn_submit">Принять</string>
    <string name="btn_dell">Удалить</string>
    <string name="title_dell_edit_country">Редактировать/Удалить код страны</string>
    <string name="title_add_country">Добавить код страны</string>
    <string name="category">Категории</string>
    <string name="category_add">Добавить категорию.</string>
    <string name="category_edit_dell">Редактировать/Удалить категорию.</string>
    <string name="level">Уровень досупа</string>
    <string name="number_level">Номер уровня</string>
    <string name="note_level">Описание уровня доступа</string>
    <string name="level_edit_dell">Редактировать/Удалить уровень доступа.</string>
    <string name="level_add">Добавить уровень доступа.</string>

</resources>
