<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="32dp"
    android:id="@+id/llCountry"
    android:layout_gravity="center_vertical"

    >

    <TextView
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvCountryCod"
        android:layout_marginLeft="16dp"
        android:layout_gravity="center_vertical"
        android:hint="@string/country_codes"
        />
    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvCountryName"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:hint="@string/country"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvCountryLitlName"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:hint="@string/litl_cod_country"
        />
</LinearLayout>